[project]
name = "environment-store"
version = "0.1.0"
description = "Python library to store and manage environment variables persistently."
authors = [
    {name = "Maalik Kaufhold",email = "mail@maalikaufhold.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "aws",
    "environment",
    "variables",
    "environment-variables",
    "parameter-store",
    "secrets-manager",
    "ssm",
    "boto3",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mkaufhol/environment-store"
Repository = "https://github.com/mkaufhol/environment-store"
Issues = "https://github.com/mkaufhol/environment-store/issues"

[tool.poetry]
packages = [{include = "environment_store", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
boto3 = "^1.42.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"
pre-commit = "^4.3.0"
bandit = "^1.8.6"
tox = "^4.31.0"


[tool.poetry.group.stubs.dependencies]
boto3-stubs = "^1.40.55"


[tool.poetry.group.testing.dependencies]
pytest = "^8.4.2"
moto = "^5.1.15"
coverage = "^7.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 30
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
